fix mobile chat image spacing and size

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -52,6 +52,9 @@ $pswp__assets-path: '../../dist/img/' !default; // path to skin assets folder (p
 .chat {
   $triangle-size: 20px;
   $triangle-top-margin: 36px;
+  +mobile {
+    $triangle-top-margin: 13px;
+  }
   $border-color: $grey-lightest;
   $padding: 2rem;
 
